--- a/assignment-2b-group6/css/general.css
+++ b/assignment-2b-group6/css/general.css
@@ -3,10 +3,23 @@ h1 {
 color: #CE5937;
 }
 
+html { 
+  height: 100%;
+}
+
 body {
   color: #2C2C2C;
   font-family: Helvetica;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+header {
+    #position: -webkit-sticky;
+    #position: sticky;
+    #top: 0;
 }
 
 .content {
@@ -15,6 +28,10 @@ body {
 }
 
 a { color: #CE5937; }
+
+ul > li:nth-child(1) > a {
+padding-left: 0;
+}
 
 .header {
   background-color: grey;
@@ -85,19 +102,23 @@ li a {
 .footer {
   background-color: grey; 
   margin: 20px 0 0 0;
+  min-width: 100%;
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  margin-top: auto;
 }
 
- footer {
-  max-width: 1200px;
+footer {
   display: flex;
+  max-width: 1200px;
   align-items: center;
   flex-direction: row;
   gap: 175px;
   justify-content: center;
-  height: 125px;;
-  }
-
-
+  height: 125px;
+  margin: 0 auto;
+}
 
 button {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -106,11 +127,6 @@ button {
   width: 100px;
 }
 
-  footer {
-  position: relative;
-  max-width: 1200px;
-  margin: 0 auto;
-}  
 @media screen and (max-width: 1200px) {
     footer {
     max-width: 1200px;
@@ -138,5 +154,23 @@ button {
   position: absolute;
   bottom: 0;
   right: 25px;
+  color: #CE5937;
 }
 
+.icons > ul > * > a {
+  color: white !important;
+}
+
+.icons > img {
+margin-left: 5px;
+}
+
+.icons > ul {
+list-style-type: none;
+margin: 0;
+padding: 0;
+display: flex;
+align-items: center;
+flex-direction: row;
+height: 40px;
+}
