--- a/assignment-2b-group6/css/review.css
+++ b/assignment-2b-group6/css/review.css
@@ -14,7 +14,17 @@ flex: 1 0 27%;
 margin: 25px;
 padding-left: 25px;
 padding-bottom: 25px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+position: relative;
+}
+
+blockquote {
+padding-bottom: 25px;
+}
+
+.stars {
+position: absolute;
+bottom: 20px;
 }
 
 @media screen and (max-width: 1200px) {
